--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Display"
-            android:label="Get value"
-            android:theme="@style/AppTheme"></activity>
-
+        <activity android:name=".InfoMenu"></activity>
     </application>
 
 </manifest>
